# raytracing_in_rust

./: Cargo.toml  README.md
render_config/: benchmark.toml  book_3.render_config  book_3.toml
src/: aabb.rs  bvh_node.rs  camera.rs  hittable.rs  hittable_service.rs  lib.rs  main.rs  material.rs  material_service.rs  moving_sphere.rs  ortho_normal_base.rs  pdf.rs  perlin.rs  ray.rs  render_config.rs  scene_builder.rs  scene_service.rs  service_locator.rs  sphere.rs  texture.rs  texture_service.rs  vector3.rs
src/core/: color_rgb.rs  mod.rs  ray.rs
src/geometry/: aabb.rs  mod.rs  ray.rs  vector3.rs
src/hittables/: box_hittable.rs  bvh_node.rs  constant_medium.rs  default_hittable.rs  flip_face.rs  hit_record.rs  hittable.rs  hittable_enum.rs  hittable_list.rs  mod.rs  moving_sphere.rs  rotate_y.rs  sphere.rs  translate.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
src/materials/: default_material.rs  dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  material_enum.rs  metal.rs  mod.rs  scatter_record.rs
src/math/: mod.rs  ortho_normal_base.rs  utility.rs  vector3.rs
src/noise/: perlin.rs
src/pdfs/: cosine_pdf.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs  pdf.rs  pdf_enum.rs
src/render/: integrator.rs  renderer.rs
src/scene/: camera.rs  mod.rs  scene_builder.rs
src/services/: hittable_service.rs  image_presentation_service.rs  material_service.rs  mod.rs  scene_service.rs  service_locator.rs  texture_service.rs
src/textures/: checker.rs  checker_texture.rs  default.rs  default_texture.rs  image.rs  image_texture.rs  mod.rs  noise.rs  (+5 more)
(+6 files in other folders)
