[package]
name = "raytracing_in_rust"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
lto = "fat"
target-cpu = "native"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.20"
rand = "0.6.5"