[package]
name = "raytracing_in_rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.20"
rand = "0.8"
rand_chacha = "0.3.1"
rayon = "1.5.3"
image = "0.24.2"