[package]
name = "raytracing_in_rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raytracing_in_rust"
path = "src/main.rs"

[lib]
name = "raytracing_in_rust"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = true
#panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.5.3"
image = "0.24.3"
confy = "0.4.0"
serde = { version = "1.0.142", features = ["derive"] }